--- a/LojaTenisAula1/appsettings.json
+++ b/LojaTenisAula1/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnnection": "server=DESKTOP-6FBJGA8\\SQLEXPRESS ; database=Aulas-ProjetoLojaTenis1; trusted_connection=true; trustservercertificate=true"
+    "DefaultConnnection": "server=DESKTOP-MEQBME3\\SQLEXPRESS ; database=Aulas-ProjetoLojaTenis1; trusted_connection=true; trustservercertificate=true"
   },
   "AllowedHosts": "*"
 }
